--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Website</title>
-    <link rel="stylesheet" href="home.css">
+    <link rel="stylesheet" href="./-UGR-1535-15-portfolio-profile-html-css-js2/home.css">
 </head>
 <body>   
         <header>
-            <a href="/index.html" class="logo"><img src="logoimage.jpg" alt="logoimage"></a> 
+            <a href="./-UGR-1535-15-portfolio-profile-html-css-js2/index.html" class="logo"><img src="./-UGR-1535-15-portfolio-profile-html-css-js2/logoimage.jpg" alt="logoimage"></a> 
             <nav class="tab">
                 <ul>
-                    <li><a href="index.html" class="active">Home</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="skill.html">Skill</a></li>
-                    <li><a href="background.html">Background</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="./-UGR-1535-15-portfolio-profile-html-css-js2/index.html" class="active">Home</a></li>
+                    <li><a href="./-UGR-1535-15-portfolio-profile-html-css-js2/about.html">About</a></li>
+                    <li><a href="./-UGR-1535-15-portfolio-profile-html-css-js2/skill.html">Skill</a></li>
+                    <li><a href="./-UGR-1535-15-portfolio-profile-html-css-js2/background.html">Background</a></li>
+                    <li><a href="./-UGR-1535-15-portfolio-profile-html-css-js2/contact.html">Contact</a></li>
                 </ul>
             </nav>
         </header>
@@ -23,7 +23,7 @@
         <section class="background-section">
             <div class="overlay">  
                 <div class="imger">
-                <img src="myimage.jpg" alt="myimage">  </div>
+                <img src="./-UGR-1535-15-portfolio-profile-html-css-js2/myimage.jpg" alt="myimage">  </div>
                <div class="otherer">
                 <h1 >Welcome</h1>
               <p >
@@ -32,7 +32,7 @@
                 recording that gives a quick rundown of this website can be found below. I urge you to pay attention and do more research.
               </p>
               <audio  controls>
-                <source src="audio.mp3" type="audio/mpeg"> 
+                <source src="./-UGR-1535-15-portfolio-profile-html-css-js2/audio.mp3" type="audio/mpeg"> 
                 <p>If the audio doesn't work, it may be that your browser doesn't allow audio playback. SORRY!</p>
               </audio>
             </div>
@@ -40,7 +40,7 @@
           </section>
         <article class="article-section">
         <section>
-            <img src="githubimage.png" alt="githubimage">
+            <img src="./-UGR-1535-15-portfolio-profile-html-css-js2/githubimage.png" alt="githubimage">
             <div class="text-content">
             <h2>Website Source Code (Wireframe and sitediagram)</h2>
             <p>Are you interested in this website's layout and design? before that you can see the wireframe and the sitediagram of 
@@ -50,7 +50,7 @@
         </div>
         </section>
         <section>
-            <img src="githubimage.png" alt="githubimage">
+            <img src="./-UGR-1535-15-portfolio-profile-html-css-js2/githubimage.png" alt="githubimage">
             <div class="text-content">
             <h2>Website Source Code (HTML and CSS )</h2>
             <p>Are you interested in this website's layout and design? The source code used to create this website
@@ -60,7 +60,7 @@
         </div>
      </section>
         <section>
-            <img src="githubimage.png" alt="githubimage">
+            <img src="./-UGR-1535-15-portfolio-profile-html-css-js2/githubimage.png" alt="githubimage">
             <div class="text-content">
             <h2>                 Website Source Code (JavaScript)</h2>
             <p>Are you interested in this website's layout and design? The source code used to create this website
@@ -70,7 +70,7 @@
         </div>
     </section>
         <section>
-            <img src="leetcodeimage.png" alt="leetcodeimage"> 
+            <img src="./-UGR-1535-15-portfolio-profile-html-css-js2/leetcodeimage.png" alt="leetcodeimage"> 
             <div class="text-content">
             <h2>LeetCode Practice (problems i do)</h2>
             <p>I actively use LeetCode to improve my coding and problem-solving abilities. By clicking the link below, you can see my LeetCode profile, 
@@ -82,10 +82,10 @@
     </article>
     </main>
     <footer>
-        <p><img src="teleimage.jpg" alt="teleimage"> 
+        <p><img src="./-UGR-1535-15-portfolio-profile-html-css-js2/teleimage.jpg" alt="teleimage"> 
             Telegram account: <a href="https://t.me/alladinmf" target="_blank">alladinmf</a>
         </p>
-        <p><img src="githubimage.png" alt="githubimage"> 
+        <p><img src="./-UGR-1535-15-portfolio-profile-html-css-js2/githubimage.png" alt="githubimage"> 
             Github account:<a href="http://github.com/samuelteferiu" target="_blank">samuelteferiu</a>  </p>
          <p><strong>&copy; 2024 Samuel Teferi Flatie. All rights reserved.</strong></p>       
     </footer>
