--- a/contact.html
+++ b/contact.html
@@ -3,19 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-    <link rel="stylesheet" href="/new/contact.css">
+    <link rel="stylesheet" href="../-UGR-1535-15-portfolio-profile-html-css-js2/contact.css">
     <title>My website</title>
 </head>
 <body>
     <header>
-        <a href="/new/index.html" class="logo"><img src="/new/logoimage.jpg" alt="logoimage"></a> 
+        <a href="../-UGR-1535-15-portfolio-profile-html-css-js2/index.html" class="logo"><img src="../-UGR-1535-15-portfolio-profile-html-css-js2/logoimage.jpg" alt="logoimage"></a> 
         <nav class="tab">
             <ul>
-                <li><a href="/new/index.html">Home</a></li>
-                <li><a href="/new/about.html">About</a></li>
-                <li><a href="/new/skill.html">Skill</a></li>
-                <li><a href="/new/background.html">Background</a></li>
-                <li><a href="/new/contact.html"  class="active">Contact</a></li>
+                <li><a href="../-UGR-1535-15-portfolio-profile-html-css-js2/index.html">Home</a></li>
+                <li><a href="../-UGR-1535-15-portfolio-profile-html-css-js2/about.html">About</a></li>
+                <li><a href="../-UGR-1535-15-portfolio-profile-html-css-js2/skill.html">Skill</a></li>
+                <li><a href="../-UGR-1535-15-portfolio-profile-html-css-js2/background.html">Background</a></li>
+                <li><a href="../-UGR-1535-15-portfolio-profile-html-css-js2/contact.html"  class="active">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -23,7 +23,7 @@
         <section class="contact-section">
             <h2>Contact Information</h2>
             <div class="contact-item">
-                <img src="/new/personimage.png" alt="personimage" class="contact-info-image">
+                <img src="../-UGR-1535-15-portfolio-profile-html-css-js2/personimage.png" alt="personimage" class="contact-info-image">
                 <p class="contact-info-text">Fullname<br>
                     Hello, My name is Samuel Teferi Flatie. My parents' names are Mr. Teferi Flatie and Mrs. Haimanot Tadesse. I am their second kid.
                     Growing up in a loving and close-knit family taught me values like honesty, discipline, and mutual respect.
@@ -33,7 +33,7 @@
             </div>
 
             <div class="contact-item">
-                <img src="/new/phoneimage.png" alt="phoneimage" class="contact-info-image">
+                <img src="../-UGR-1535-15-portfolio-profile-html-css-js2/phoneimage.png" alt="phoneimage" class="contact-info-image">
                 <p class="contact-info-text">Mobile phone number<br>
                     You can call me directly on my cell phone at 0943853821.
                     This is my primary phone number for personal and professional communication.
@@ -42,7 +42,7 @@
             </div>
 
             <div class="contact-item">
-                <img src="/new/locationimage.png" alt="locationimage" class="contact-info-image">
+                <img src="../-UGR-1535-15-portfolio-profile-html-css-js2/locationimage.png" alt="locationimage" class="contact-info-image">
                 <p class="contact-info-text">Home address<br>
                     My residence is located near CMC Michael. To schedule a private meeting or visit,
                     please contact me ahead of time to ensure a mutually convenient time. This allows me
@@ -51,7 +51,7 @@
             </div>
 
             <div class="contact-item">
-                <img src="/new/emailimage.jpg" alt="emailimage" class="contact-info-image">
+                <img src="../-UGR-1535-15-portfolio-profile-html-css-js2/emailimage.jpg" alt="emailimage" class="contact-info-image">
                 <p class="contact-info-text">Email address<br>
                     Another way to communicate is by email.<strong> Samuelflatie@gmail.com</strong> Here's my email address.
                     Email is a fantastic tool for doing business inquiries, sharing important papers, and having in-depth discussions.
@@ -60,7 +60,7 @@
             </div>
 
             <div class="contact-item">
-                <img class="contact-info-image" src="/new/secondaryimage.png" alt="secondaryimage" >
+                <img class="contact-info-image" src="../-UGR-1535-15-portfolio-profile-html-css-js2/secondaryimage.png" alt="secondaryimage" >
                 <p class="contact-info-text">Secondary contact<br>
                     My sister, Ms. Rahel Teferi, is authorized to act on my behalf in the event that I am unable to do so and immediate assistance is required.
                     Her address is <strong>0923165959</strong>. To ensure she can assist, please approach her nicely and explain the subject of your question.
