--- a/background.html
+++ b/background.html
@@ -3,19 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/new/background.css">
+  <link rel="stylesheet" href="../-UGR-1535-15-portfolio-profile-html-css-js2/background.css">
   <title>My Website</title>
 </head>
 <body>
   <header>
-    <a href="/new/index.html" class="logo"><img src="/new/logoimage.jpg" alt="logoimage"></a> 
+    <a href="../-UGR-1535-15-portfolio-profile-html-css-js2/index.html" class="logo"><img src="../-UGR-1535-15-portfolio-profile-html-css-js2/logoimage.jpg" alt="logoimage"></a> 
     <nav class="tab">
       <ul>
-        <li><a href="/new/index.html" >Home</a></li>
-        <li><a href="/new/about.html">About</a></li>
-        <li><a href="/new/skill.html">Skill</a></li>
-        <li><a href="/new/background.html" class="active">Background</a></li>
-        <li><a href="/new/contact.html">Contact</a></li>
+        <li><a href="../-UGR-1535-15-portfolio-profile-html-css-js2/index.html" >Home</a></li>
+        <li><a href="../-UGR-1535-15-portfolio-profile-html-css-js2/about.html">About</a></li>
+        <li><a href="../-UGR-1535-15-portfolio-profile-html-css-js2/skill.html">Skill</a></li>
+        <li><a href="../-UGR-1535-15-portfolio-profile-html-css-js2/background.html" class="active">Background</a></li>
+        <li><a href="../-UGR-1535-15-portfolio-profile-html-css-js2/contact.html">Contact</a></li>
       </ul>
     </nav>
   </header>
@@ -25,19 +25,19 @@
           <section>
             <h1>Previous Education</h1>
             <div class="education-dop">
-              <img class="education-img" src="/new/myschool.png" alt="myschool">
+              <img class="education-img" src="../-UGR-1535-15-portfolio-profile-html-css-js2/myschool.png" alt="myschool">
               <p class="education-text">
                 Elementary school: I started my education at Foundation of Knowledge School and continued there through the sixth grade.
               </p>
             </div>
             <div class="education-dop">
-              <img class="education-img" src="/new/myschool.png" alt="myschool">
+              <img class="education-img" src="../-UGR-1535-15-portfolio-profile-html-css-js2/myschool.png" alt="myschool">
               <p class="education-text">
                 High school: After that, I moved to Mission School, where I graduated with honors and exceptional performance from both elementary and high school.
               </p>
             </div>
             <div class="education-dop">
-              <img class="education-img" src="/new/myuniversity.jpg" alt="myuniversity">
+              <img class="education-img" src="../-UGR-1535-15-portfolio-profile-html-css-js2/myuniversity.jpg" alt="myuniversity">
               <p class="education-text">
                 University: I was a third-year student at Addis Ababa University (AAU) studying software engineering at the time I created this portfolio. In the first semester of my third year, I created this portfolio as a component of a Web Programming project.
               </p>
@@ -47,19 +47,19 @@
           <section class="ordered-now"> 
             <div class="todler">
             <a href="https://github.com/samuelteferiu/chess" target="_blank">
-              <img src="/new/githubimage.png" alt="githubimage">
+              <img src="../-UGR-1535-15-portfolio-profile-html-css-js2/githubimage.png" alt="githubimage">
             </a>
             <h2>Chess</h2>
           </div>
           <div class="todler">
             <a href="https://github.com/samuelteferiu/banking-system" target="_blank">
-              <img src="/new/githubimage.png" alt="githubimage">
+              <img src="../-UGR-1535-15-portfolio-profile-html-css-js2/githubimage.png" alt="githubimage">
             </a>
             <h2>Banking System</h2>
           </div>
           <div class="todler">
             <a href="https://github.com/samuelteferiu/task-scheduler" target="_blank">
-              <img src="/new/githubimage.png" alt="githubimage">
+              <img src="../-UGR-1535-15-portfolio-profile-html-css-js2/githubimage.png" alt="githubimage">
             </a>
             <h2>Task Scheduler</h2>
           </div>
@@ -70,19 +70,19 @@
             <h2>Workplace</h2>
             <ol>
               <li>
-                <img class="workplace-img" src="/new/mygoogle.jpg" alt="mygoogle">
+                <img class="workplace-img" src="../-UGR-1535-15-portfolio-profile-html-css-js2/mygoogle.jpg" alt="mygoogle">
                 <p class="workplace-text">
                   For many people, including myself, Google is the ideal place to work. Distinguished by its outstanding work culture and high levels of employee satisfaction, it is the ultimate objective I work toward with commitment and diligence.
                 </p>
               </li>
               <li>
-                <img class="workplace-img" src="/new/mymicrosoft.png" alt="mymicrosoft">
+                <img class="workplace-img" src="../-UGR-1535-15-portfolio-profile-html-css-js2/mymicrosoft.png" alt="mymicrosoft">
                 <p class="workplace-text">
                   Because Microsoft provides a welcoming and diverse workplace, it's a great opportunity for me to grow professionally and improve my knowledge in addition to advancing in my industry.
                 </p>
               </li>
               <li>
-                <img class="workplace-img" src="/new/mynetflix.png" alt="mynetflix">
+                <img class="workplace-img" src="../-UGR-1535-15-portfolio-profile-html-css-js2/mynetflix.png" alt="mynetflix">
                 <p class="workplace-text">
                   The main reasons Netflix appeals to me are its creative culture and competitive compensation. Nonetheless, I intend to conduct a comprehensive investigation into its workplace to make sure it complements my career and personal objectives.
                 </p>
