--- a/skill.html
+++ b/skill.html
@@ -3,19 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/new/skill.css">
+  <link rel="stylesheet" href="../-UGR-1535-15-portfolio-profile-html-css-js2/skill.css">
   <title>My Website</title>
 </head>
 <body>
   <header>
-    <a href="/new/index.html" class="logo"><img src="/new/logoimage.jpg" alt="logoimage"></a> 
+    <a href="../-UGR-1535-15-portfolio-profile-html-css-js2/index.html" class="logo"><img src="../-UGR-1535-15-portfolio-profile-html-css-js2/logoimage.jpg" alt="logoimage"></a> 
     <nav class="tab">
       <ul>
-        <li><a href="/new/index.html" >Home</a></li>
-        <li><a href="/new/about.html">About</a></li>
-        <li><a href="/new/skill.html"class="active">Skill</a></li>
-        <li><a href="/new/background.html">Background</a></li>
-        <li><a href="/new/contact.html">Contact</a></li>
+        <li><a href="../-UGR-1535-15-portfolio-profile-html-css-js2/index.html" >Home</a></li>
+        <li><a href="../-UGR-1535-15-portfolio-profile-html-css-js2/about.html">About</a></li>
+        <li><a href="../-UGR-1535-15-portfolio-profile-html-css-js2/skill.html"class="active">Skill</a></li>
+        <li><a href="../-UGR-1535-15-portfolio-profile-html-css-js2/background.html">Background</a></li>
+        <li><a href="../-UGR-1535-15-portfolio-profile-html-css-js2/contact.html">Contact</a></li>
       </ul>
     </nav>
   </header>
@@ -24,18 +24,18 @@
       <h2>Foreign language</h2>
       <div class="language-content">
         <div class="language-item">
-          <img class="lan-img" src="/new/englishimage.jpg" alt="englishimage">
+          <img class="lan-img" src="../-UGR-1535-15-portfolio-profile-html-css-js2/englishimage.jpg" alt="englishimage">
           <p>Since English is regarded as a necessary language in many African nations, it was the first foreign language I learnt. 
              It is the language I am most fluent in, though I am still working toward mastery. </p>
         </div>
         <div class="language-item">
-          <img class="lan-img" src="/new/frenchimage.png" alt="frenchimage">
+          <img class="lan-img" src="../-UGR-1535-15-portfolio-profile-html-css-js2/frenchimage.png" alt="frenchimage">
           <p>In my early school years, French became my second foreign language. At first, I didn't realize how important learning a second language was. 
              But I went on to study French in high school and received an A1 certification.
           </p>
         </div>
         <div class="language-item">
-          <img class="lan-img" src="/new/arabicimage.png" alt="arabicimage">
+          <img class="lan-img" src="../-UGR-1535-15-portfolio-profile-html-css-js2/arabicimage.png" alt="arabicimage">
           <p>I learned Arabic by accident, mostly as a result of my childhood fascination with Arabic cartoon films. 
              I hope to become proficient in it in the future.
           </p>
@@ -46,13 +46,13 @@
     <div class="section relevant-skill">
       <h1>Relevant skill</h1>
       <div class="skill-item">
-          <img class="rel-img" src="/new/typingimage.jpg" alt="typingimage">   
+          <img class="rel-img" src="../-UGR-1535-15-portfolio-profile-html-css-js2/typingimage.jpg" alt="typingimage">   
         <p>Typing
           Using a variety of internet resources, I have improved my typing abilities. My accuracy and efficiency when working on digital activities have increased as a result of this.
         </p>
       </div>
       <div class="skill-item">
-          <img class="rel-img" src="/new/communicationimage.png" alt="communicationimage">
+          <img class="rel-img" src="../-UGR-1535-15-portfolio-profile-html-css-js2/communicationimage.png" alt="communicationimage">
         <p>Communication
           Both personal and professional contexts require effective communication.
           In order to promote stronger bonds and teamwork, I'm always trying to get better at this ability.
@@ -60,13 +60,13 @@
       </div>
     </div>
     <div class="mypractices">
-        <a href="https://github.com/your-username/your-repo" target="_blank"><img src="/new/githubimage.png" alt="githubimage"></a>   
-        <a href="https://github.com/your-username/your-repo" target="_blank">  <img src="/new/leetcodeimage.png" alt="leetcodeimage"> </a>           
+        <a href="https://github.com/your-username/your-repo" target="_blank"><img src="../-UGR-1535-15-portfolio-profile-html-css-js2/githubimage.png" alt="githubimage"></a>   
+        <a href="https://github.com/your-username/your-repo" target="_blank">  <img src="../-UGR-1535-15-portfolio-profile-html-css-js2/leetcodeimage.png" alt="leetcodeimage"> </a>           
     </div>
     <div class="section voluntary-work">
       <h1>Voluntary work</h1>
       <video controls>
-        <source src="/new/voluntaryvideo.mp4" type="video/mp4">
+        <source src="../-UGR-1535-15-portfolio-profile-html-css-js2/voluntaryvideo.mp4" type="video/mp4">
         Your browser does not support the video tag. Please download the video <a href="/new/voluntaryvideo.mp4">here</a>.
       </video> 
     </div>
