--- a/about.html
+++ b/about.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <title>My Website</title>
-    <link rel="stylesheet" href="/new/about.css">
+    <link rel="stylesheet" href="../-UGR-1535-15-portfolio-profile-html-css-js2/about.css">
 </head>
 <body>
     <header>
-        <a href="/new/index.html" class="logo"><img src="/new/logoimage.jpg" alt="logoimage"></a> 
+        <a href="../-UGR-1535-15-portfolio-profile-html-css-js2/index.html" class="logo"><img src="../-UGR-1535-15-portfolio-profile-html-css-js2/logoimage.jpg" alt="logoimage"></a> 
         <nav class="tab">
             <ul>
-                <li><a href="/new/index.html" >Home</a></li>
-                <li><a href="/new/about.html" class="active">About</a></li>
-                <li><a href="/new/skill.html">Skill</a></li>
-                <li><a href="/new/background.html">Background</a></li>
-                <li><a href="/new/contact.html">Contact</a></li>
+                <li><a href="../-UGR-1535-15-portfolio-profile-html-css-js2/index.html" >Home</a></li>
+                <li><a href="../-UGR-1535-15-portfolio-profile-html-css-js2/about.html" class="active">About</a></li>
+                <li><a href="../-UGR-1535-15-portfolio-profile-html-css-js2/skill.html">Skill</a></li>
+                <li><a href="../-UGR-1535-15-portfolio-profile-html-css-js2/background.html">Background</a></li>
+                <li><a href="../-UGR-1535-15-portfolio-profile-html-css-js2/contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -53,7 +53,7 @@
         <h2>Like and Dislike</h2>
         <div class="like-dislike-grid">
             <div class="grid-item">
-                <img src="/new/likeimage.png" alt="likeimage">
+                <img src="../-UGR-1535-15-portfolio-profile-html-css-js2/likeimage.png" alt="likeimage">
                 <ol>
                     <li>1.Meat: My favorite food in the world. I could eat it every day!</li>
                     <li>2.Sleeping during rain: The soothing sound of rain makes for the perfect nap atmosphere.</li>
@@ -61,7 +61,7 @@
                 </ol>
             </div>
             <div class="grid-item">
-                <img src="/new/dislikeimage.jpg" alt="dislikeimage">
+                <img src="../-UGR-1535-15-portfolio-profile-html-css-js2/dislikeimage.jpg" alt="dislikeimage">
                 <ol>
                     <li>1.Working on holidays: It ruins not just the day but often the entire week.</li>
                     <li>2.Diet food: Eating diet food makes me feel like a goat grazing on grass.</li>
@@ -82,11 +82,11 @@
     </div>
     </main>
     <footer>
-        <p><img src="/new/teleimage.jpg" alt="teleimage"> 
+        <p><img src="../-UGR-1535-15-portfolio-profile-html-css-js2/teleimage.jpg" alt="teleimage"> 
             Telegram account: <a href="https://t.me/alladinmf" target="_blank">alladinmf</a>
 
         </p>
-        <p><img src="/new/githubimage.png" alt="githubimage"> 
+        <p><img src="../-UGR-1535-15-portfolio-profile-html-css-js2/githubimage.png" alt="githubimage"> 
             Github account:<a href="http://github.com/samuelteferiu" target="_blank">samuelteferiu</a>  </p>
          <p><strong>&copy; 2024 Samuel Teferi Flatie. All rights reserved.</strong></p>       
     </footer>
